# kafka-in-rust

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs
crates/commons/: Cargo.toml
crates/commons/src/: config.rs  lib.rs  models.rs
crates/consumer_service/: Cargo.toml
crates/consumer_service/src/: lib.rs  processor.rs
crates/kafka_layer/: Cargo.toml
crates/kafka_layer/src/: consumer.rs  lib.rs  producer.rs
crates/producer_service/: Cargo.toml
crates/producer_service/src/: handlers.rs  lib.rs
